@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.1034 2009-06-21 02:24:58 castaglia Exp $
+$Id: NEWS,v 1.1035 2009-06-21 19:19:49 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -114,6 +114,7 @@ CVS
 - Added mod_shaper, mod_exec to the contrib modules.
 - Bug 3249 - mod_ban support for TimeoutLogin.
 - Bug 3253 - Support for %S variable in SQL queries.
+- Bug 3247 - "TLSRequired auth" and "TLSOptions AllowPerUser" are incompatible.
 
 1.3.2 - Released 5-Feb-2009
 --------------------------------
